[gd_scene load_steps=4 format=3 uid="uid://cr8nwg8640563"]

[ext_resource type="Script" path="res://Throok.gd" id="1_i6mkb"]
[ext_resource type="Texture2D" uid="uid://ccr28trw6tw6j" path="res://Throok.png" id="1_qkeyd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o3pi"]
size = Vector2(24, 48)

[node name="Throok" type="CharacterBody2D"]
script = ExtResource("1_i6mkb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, -16)
scale = Vector2(0.1875, 0.1875)
texture = ExtResource("1_qkeyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, -16)
shape = SubResource("RectangleShape2D_4o3pi")

[node name="Wall_Check" type="Node2D" parent="."]
position = Vector2(4, -16)

[node name="Wall_Raycast_Left" type="RayCast2D" parent="Wall_Check"]
rotation = 1.57079
target_position = Vector2(-6.58035e-05, 30)

[node name="Wall_Raycast_Right" type="RayCast2D" parent="Wall_Check"]
rotation = -1.57079
target_position = Vector2(-6.58035e-05, 30)

[node name="Floor_Check" type="Node2D" parent="."]
position = Vector2(4, -16)

[node name="Floor_Raycast_Left" type="RayCast2D" parent="Floor_Check"]
position = Vector2(-12, 0)

[node name="Floor_Raycast_Right" type="RayCast2D" parent="Floor_Check"]
position = Vector2(12, 0)

[node name="Player_Tracker_Pivot" type="Node2D" parent="."]
position = Vector2(4, -16)

[node name="Player_Tracker_Raycast" type="RayCast2D" parent="Player_Tracker_Pivot"]
rotation = -1.57079
target_position = Vector2(0.000179291, 81)
collision_mask = 3

[node name="ChaseTimer" type="Timer" parent="."]
